<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnConsult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edTxtDescr"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="144dp"
        android:text="@string/btnConsultStr" />

    <Button
        android:id="@+id/btnDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edTxtDescr"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="96dp"
        android:text="@string/btnDescriptioinStr" />

    <Button
        android:id="@+id/btnModify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edTxtDescr"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="51dp"
        android:text="@string/btnModifyStr" />

    <Button
        android:id="@+id/btnDelate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edTxtDescr"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/colorAccent"
        android:text="@string/btnDeleteStr" />

    <EditText
        android:id="@+id/edTxtDescr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="134dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edTxtDescriptionStr"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tView_Articulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="10dp"
        android:text="@string/tViewStr_CodigoItem"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tView_ArtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="102dp"
        android:text="@string/tViewArtDescriptionStr"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tView_PrecioArt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="197dp"
        android:text="@string/tViewPrecioArtStr"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edTxtCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/edTxtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="241dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edTxtDescr"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="191dp"
        android:text="@string/btnCreateStr" />
</RelativeLayout>